--- a/index.html
+++ b/index.html
@@ -284,17 +284,17 @@
 								<section>
 									<span class="icon solid style2 major fa-bolt"></span>
 									<h3>JupyterHub</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Cloud computing is a necessity when it comes to astrophysics coding with data of astronomical size (see what I did there?). <a href="https://jupyter.org/hub">JupyterHub</a> has given me a stepping stone into the world of cloud computing from the comfort of my Jupyter notebooks.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-envelope"></span>
 									<h3>Markdown</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Pretty code is good code! That's why I use <a href="https://en.wikipedia.org/wiki/Markdown">Markdown</a> when I'm working in Jupyter Notebooks. </p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-leaf"></span>
 									<h3>LaTeX</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Ever wondered how scientist make fancy equations and prestine papers? Look no further than LaTeX, the scientific standard for formating text. <a href="https://www.overleaf.com/home-2">Overleaf</a></p> is my personal go-to LaTeX editor when it comes to beautifying papers. 
 								</section>
 							</div>
 						</div>
