Testing new Font Awesome icon

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-bolt"></span>
+									<span class="icon solid style2 major fa-cloud"></span>
 									<h3>JupyterHub</h3>
 									<p>Cloud computing is a necessity when it comes to astrophysics coding with data of astronomical size (see what I did there?). <a href="https://jupyter.org/hub">JupyterHub</a> has given me a stepping stone into the world of cloud computing from the comfort of my Jupyter notebooks.</p>
 								</section>
@@ -294,7 +294,7 @@
 								<section>
 									<span class="icon solid style2 major fa-leaf"></span>
 									<h3>LaTeX</h3>
-									<p>Ever wondered how scientist make fancy equations and prestine papers? Look no further than LaTeX, the scientific standard for formating text. <a href="https://www.overleaf.com/home-2">Overleaf</a></p> is my personal go-to LaTeX editor when it comes to beautifying papers. 
+									<p>Ever wondered how scientist make fancy equations and prestine papers? Look no further than LaTeX, the scientific standard for formating text. <a href="https://www.overleaf.com/home-2">Overleaf</a> is my personal go-to LaTeX editor when it comes to beautifying papers. </p>
 								</section>
 							</div>
 						</div>
