Cursor delay adjust

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Python</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>In astrophysics, Python reigns supreme. This is the language I am most comfortable and experienced in, having used it for both school and reserach. </p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
