Basic cursor testing

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
 									<h3>Java</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>This is the primary language I used while completing my computer science courses. It's through Java that I learned more rigourous coding concepts, such as recursion and object-oriented programming. </p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
 									<h3>C++</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>This is the first ever coding language I learned in college, which gave me my first understanding of basic coding concepts such as arithmetic, syntax, and looping. </p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
