Added research image and intro

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 						<div class="content">
 							<!-- <h1>Hi, my name is Andrew. </h1> -->
 							<h1><span id="typing-text"></span></h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
-							<ul class="actions stacked">
+							<p class="major">I recently graduate from Florida Tech with a Bachelor's in Astronomy & Astrophysics along with a Minor in Computer Sciences. My research experience revolves around galactic simulations and synthetic survey generation, culminating in a paper in the process of being published. I’m passionate about esports and strategy games, in particular, Magic: The Gathering and Valorant. </a>.</p>
+							<!-- <ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<div class="image">
 							<img src="images/profile.jpg" alt="" />
@@ -42,7 +42,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/galactic.jpg" alt="" />
 						</div>
 					</section>
 
