Inconsistent image type

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/galactic.jpg" alt="" />
+							<img src="images/galactic.png" alt="" />
 						</div>
 					</section>
 
