--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 						<div class="content">
 							<!-- <h1>Hi, my name is Andrew. </h1> -->
 							<h1><span id="typing-text"></span></h1>
-							<p class="major">I recently graduate from Florida Tech with a Bachelor's in Astronomy & Astrophysics along with a Minor in Computer Sciences. My research experience revolves around galactic simulations and synthetic survey generation, culminating in a paper in the process of being published. I’m passionate about esports and strategy games, in particular, Magic: The Gathering and Valorant. </a>.</p>
-							<!-- <ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
-							</ul> -->
+							<p class="major">I recently graduate from Florida Tech with a Bachelor's in Astronomy & Astrophysics along with a Minor in Computer Sciences. My research experience revolves around galactic simulations and synthetic survey generation, culminating in a paper in the process of being published. I’m passionate about esports and strategy games, in particular, Magic: The Gathering and Valorant.</p>
 						</div>
 						<div class="image">
 							<img src="images/profile.jpg" alt="" />
