Filled out the remaining text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Computer Science</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>My first experience with computer science happened in high school robotics. I'd love to be poetic about how this experience changed me as a person, but to be quite frank, I hated it. I didn't touch coding again until college, where I took an introductory C++ class and thought to myself, "Hey, this is pretty fun!". Big mistake. I've been falling down the programmer rabit hole ever since. </p>
 							<ul class="actions stacked">
 								<li><a href="https://github.com/aeden2019/" class="button">See My Code</a></li>
 							</ul>
@@ -61,7 +61,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Esports</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p> Most people have sports they like to watch, like football (the fake american one) or football (the real one). But as a nerdy kid, I've always had esports. In my teens I kept up with various video game championships, and in college I fell in love with Valorant and have been following the competitive scene ever since. When Florida Tech's Esports Center was first established, I had the joy of working as the president of the esports club as we helped put esports on the map. Nowdays, you can find me shoutcasting our schools Valorant games on the Florida Tech Esports twitch page, where I get to ramble on about my knowledge of strategies while having a blast at the same time. </p>
 							<ul class="actions stacked">
 								<li><a href="https://www.twitch.tv/fltechesports" class="button">See My VODs</a></li>
 							</ul>
@@ -78,49 +78,49 @@
 							<p>Below is a list of some of my skills I've accumulated throughout my academic career. </p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-gem"></span>
+									<span class="icon style2 major fa-python"></span>
 									<h3>Python</h3>
 									<p>In astrophysics, Python reigns supreme. This is the language I am most comfortable and experienced in, having used it for both school and reserach. </p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-save"></span>
+									<span class="icon solid style2 major fa-java"></span>
 									<h3>Java</h3>
 									<p>This is the primary language I used while completing my computer science courses. It's through Java that I learned more rigourous coding concepts, such as recursion and object-oriented programming. </p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-chart-bar"></span>
+									<span class="icon solid style2 major fa-c"></span>
 									<h3>C++</h3>
 									<p>This is the first ever coding language I learned in college, which gave me my first understanding of basic coding concepts such as arithmetic, syntax, and looping. </p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-wifi"></span>
+									<span class="icon solid style2 major fa-layer-group"></span>
 									<h3>Numpy</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>I use the <a href="https://numpy.org">Numpy</a> library everyday when I'm coding in python, as it makes life easy when it comes to multi-dimensional arrays and high-level math functions. </p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-cog"></span>
+									<span class="icon solid style2 major fa-chart-line"></span>
 									<h3>Matplotlib</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Similarily to Numpy, this is one of the python libraries I am the most used to using on the daily. <a href="https://matplotlib.org">Matplotlib</a> allows me to make complex and even dynamic graphs for my work. </p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-paper-plane"></span>
+									<span class="icon style2 major fa-meteor"></span>
 									<h3>Astropy</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p><a href="https://www.astropy.org">Astropy</a> is the go-to library when it comes to astronomy, making astronomical calculations and data visualization easy to use. It allows astronomers like myself to analyze vast datasets and perform complex calculations on a large scale. </p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-desktop"></span>
+									<span class="icon solid style2 major fa-table"></span>
 									<h3>Pandas</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>As I've plunged into large scale data, in both astronomy and computer science, <a href="https://pandas.pydata.org">Pandas</a> has been an invaluable tool. Through Pandas I am able to clean, filter, and transform large datasets with ease. </p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-sync-alt"></span>
+									<span class="icon solid style2 major fa-star"></span>
 									<h3>Apache Spark</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>If Pandas doesn't work, <a href="https://spark.apache.org">Apache Spark</a> is my second line of defense when I have to pull out the big guns. It is designed to distribute data across clusters of machines and can store much larger datasets in a more efficient way. </p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-hashtag"></span>
+									<span class="icon solid style2 major fa-kickstarter"></span>
 									<h3>Keras</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>AI has always been a facinating topic for me, and I've been able to learn about it in an academic setting with both seminars and classes. My primary tool for building neural networks is <a href="https://keras.io">Keras</a>, which provides an easy interface to the complex and powerful <a href="https://www.tensorflow.org">Tensorflow</a> library. </p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cloud"></span>
@@ -128,7 +128,7 @@
 									<p>Cloud computing is a necessity when it comes to astrophysics coding with data of astronomical size (see what I did there?). <a href="https://jupyter.org/hub">JupyterHub</a> has given me a stepping stone into the world of cloud computing from the comfort of my Jupyter notebooks.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-envelope"></span>
+									<span class="icon solid style2 major fa-markdown"></span>
 									<h3>Markdown</h3>
 									<p>Pretty code is good code! That's why I use <a href="https://en.wikipedia.org/wiki/Markdown">Markdown</a> when I'm working in Jupyter Notebooks. </p>
 								</section>
