--- a/index.html
+++ b/index.html
@@ -78,17 +78,19 @@
 							<p>Below is a list of some of my skills I've accumulated throughout my academic career. </p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-python"></span>
+									<!-- <span class="icon solid style2 major fa-python"></span> -->
+									<span class="icon brands style2 fa-python"></span>
 									<h3>Python</h3>
 									<p>In astrophysics, Python reigns supreme. This is the language I am most comfortable and experienced in, having used it for both school and reserach. </p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-java"></span>
+									<!-- <span class="icon solid style2 major fa-java"></span> -->
+									<span class="icon brands style2 fa-java"></span>
 									<h3>Java</h3>
 									<p>This is the primary language I used while completing my computer science courses. It's through Java that I learned more rigourous coding concepts, such as recursion and object-oriented programming. </p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-c"></span>
+									<span class="icon solid style2 major fa-plus"></span>
 									<h3>C++</h3>
 									<p>This is the first ever coding language I learned in college, which gave me my first understanding of basic coding concepts such as arithmetic, syntax, and looping. </p>
 								</section>
@@ -103,7 +105,7 @@
 									<p>Similarily to Numpy, this is one of the python libraries I am the most used to using on the daily. <a href="https://matplotlib.org">Matplotlib</a> allows me to make complex and even dynamic graphs for my work. </p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-meteor"></span>
+									<span class="icon solid style2 major fa-meteor"></span>
 									<h3>Astropy</h3>
 									<p><a href="https://www.astropy.org">Astropy</a> is the go-to library when it comes to astronomy, making astronomical calculations and data visualization easy to use. It allows astronomers like myself to analyze vast datasets and perform complex calculations on a large scale. </p>
 								</section>
@@ -118,7 +120,8 @@
 									<p>If Pandas doesn't work, <a href="https://spark.apache.org">Apache Spark</a> is my second line of defense when I have to pull out the big guns. It is designed to distribute data across clusters of machines and can store much larger datasets in a more efficient way. </p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-kickstarter"></span>
+									<!-- <span class="icon solid style2 major fa-kickstarter"></span> -->
+									<span class="icon brands style2 fa-kickstarter"></span>
 									<h3>Keras</h3>
 									<p>AI has always been a facinating topic for me, and I've been able to learn about it in an academic setting with both seminars and classes. My primary tool for building neural networks is <a href="https://keras.io">Keras</a>, which provides an easy interface to the complex and powerful <a href="https://www.tensorflow.org">Tensorflow</a> library. </p>
 								</section>
@@ -128,7 +131,8 @@
 									<p>Cloud computing is a necessity when it comes to astrophysics coding with data of astronomical size (see what I did there?). <a href="https://jupyter.org/hub">JupyterHub</a> has given me a stepping stone into the world of cloud computing from the comfort of my Jupyter notebooks.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-markdown"></span>
+									<!-- <span class="icon solid style2 major fa-markdown"></span> -->
+									<span class="icon brands style2 fa-markdown"></span>
 									<h3>Markdown</h3>
 									<p>Pretty code is good code! That's why I use <a href="https://en.wikipedia.org/wiki/Markdown">Markdown</a> when I'm working in Jupyter Notebooks. </p>
 								</section>
