Inconsistent icon size fixed

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<!-- <span class="icon solid style2 major fa-python"></span> -->
-									<span class="icon brands style2 fa-python"></span>
+									<span class="icon brands style2 major fa-python"></span>
 									<h3>Python</h3>
 									<p>In astrophysics, Python reigns supreme. This is the language I am most comfortable and experienced in, having used it for both school and reserach. </p>
 								</section>
 								<section>
 									<!-- <span class="icon solid style2 major fa-java"></span> -->
-									<span class="icon brands style2 fa-java"></span>
+									<span class="icon brands style2 major fa-java"></span>
 									<h3>Java</h3>
 									<p>This is the primary language I used while completing my computer science courses. It's through Java that I learned more rigourous coding concepts, such as recursion and object-oriented programming. </p>
 								</section>
@@ -121,9 +121,9 @@
 								</section>
 								<section>
 									<!-- <span class="icon solid style2 major fa-kickstarter"></span> -->
-									<span class="icon brands style2 fa-kickstarter"></span>
+									<span class="icon brands style2 major fa-kickstarter"></span>
 									<h3>Keras</h3>
-									<p>AI has always been a facinating topic for me, and I've been able to learn about it in an academic setting with both seminars and classes. My primary tool for building neural networks is <a href="https://keras.io">Keras</a>, which provides an easy interface to the complex and powerful <a href="https://www.tensorflow.org">Tensorflow</a> library. </p>
+									<p>AI has always been a facinating topic for me, and I've enjoyed learning about it in an academic setting. My primary tool for building neural networks is <a href="https://keras.io">Keras</a>, which provides an easy interface to the complex and powerful <a href="https://www.tensorflow.org">Tensorflow</a> library. </p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cloud"></span>
@@ -132,9 +132,9 @@
 								</section>
 								<section>
 									<!-- <span class="icon solid style2 major fa-markdown"></span> -->
-									<span class="icon brands style2 fa-markdown"></span>
+									<span class="icon brands style2 major fa-markdown"></span>
 									<h3>Markdown</h3>
-									<p>Pretty code is good code! That's why I use <a href="https://en.wikipedia.org/wiki/Markdown">Markdown</a> when I'm working in Jupyter Notebooks. </p>
+									<p>Pretty code is good code! As a scientist it's my job to make sure everyone can understand my work (no more spaghetti code for you). That's why I use <a href="https://en.wikipedia.org/wiki/Markdown">Markdown</a> when I'm working in Jupyter Notebooks. </p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-leaf"></span>
