--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/coding.png" alt="" />
 						</div>
 					</section>
 
@@ -67,7 +67,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/valorant.jpg" alt="" />
 						</div>
 					</section>
 
