--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<!-- <span class="icon solid style2 major fa-python"></span> -->
 									<span class="icon brands style2 major fa-python"></span>
 									<h3>Python</h3>
-									<p>In astrophysics, Python reigns supreme. This is the language I am most comfortable and experienced in, having used it for both school and reserach. </p>
+									<p>In astrophysics, Python reigns supreme. This is the language I am most comfortable and experienced in, having used it for both school and research. </p>
 								</section>
 								<section>
 									<!-- <span class="icon solid style2 major fa-java"></span> -->
