--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Computer Science</h2>
-							<p>My first experience with computer science happened in high school robotics. I'd love to be poetic about how this experience changed me as a person, but to be quite frank, I hated it. I didn't touch coding again until college, where I took an introductory C++ class and thought to myself, "Hey, this is pretty fun!". Big mistake. I've been falling down the programmer rabit hole ever since. </p>
+							<p>My first experience with computer science happened in high school robotics. I'd love to be poetic about how this experience changed me as a person, but to be quite frank, I hated it. I didn't touch coding again until college, where I took an introductory C++ class and thought to myself, "Hey, this is pretty fun!". Big mistake. I've been falling down the programmer rabbit hole ever since. </p>
 							<ul class="actions stacked">
 								<li><a href="https://github.com/aeden2019/" class="button">See My Code</a></li>
 							</ul>
