Page scroll fix

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<!-- <h1>Hi, my name is Andrew. </h1> -->
-							<h1><span id="typing-text"></span></h1>
+							<!-- <h1><span id="typing-text"></span></h1> -->
+							<h1 style="height: 1em;"><span id="typing-text"></span></h1>
 							<p class="major">I recently graduated from <a href="https://www.fit.edu">Florida Tech</a> with a Bachelor's in Astronomy & Astrophysics along with a Minor in Computer Sciences. I'm a French/American dual citizen with experience in both countries and a love for travelling. I’m passionate about esports and strategy games, in particular, <a href="https://www.moxfield.com/users/AndrewBurger"> Magic: The Gathering</a> and <a href="https://tracker.gg/valorant/profile/riot/Burger%23Nubs/overview"> Valorant</a>. </p>
 						</div>
 						<div class="image">
