Testing CSS integration

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<!-- Additional CSS for typing animation -->
+		<style>
+		    /* Adjust the font size and white-space property for the typing animation text */
+		    #typing-container h1 {
+		        font-size: inherit; /* or specify a specific font size */
+		        white-space: nowrap;
+		    }
+		</style>
+		
 	</head>
 	<body class="is-preload">
 
