Adjusted font size

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		<style>
 		    /* Adjust the font size and white-space property for the typing animation text */
 		    #typing-container h1 {
-		        font-size: inherit; /* or specify a specific font size */
+		        font-size: 2.5rem; 
 		        white-space: nowrap;
 		    }
 		</style>
-		
+
 	</head>
 	<body class="is-preload">
 
